tests/machine/x/c/two-sum.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/two-sum.c: In function ‘twoSum’:
/workspace/mochi/tests/machine/x/c/two-sum.c:23:15: error: subscripted value is neither array nor pointer nor vector
   23 |       if (nums[i] + nums[j] == target) {
      |               ^
/workspace/mochi/tests/machine/x/c/two-sum.c:23:25: error: subscripted value is neither array nor pointer nor vector
   23 |       if (nums[i] + nums[j] == target) {
      |                         ^
/workspace/mochi/tests/machine/x/c/two-sum.c:25:16: error: incompatible types when returning type ‘int *’ but ‘list_int’ was expected
   25 |         return tmp1;
      |                ^~~~
/workspace/mochi/tests/machine/x/c/two-sum.c:30:10: error: incompatible types when returning type ‘int *’ but ‘list_int’ was expected
   30 |   return tmp2;
      |          ^~~~
/workspace/mochi/tests/machine/x/c/two-sum.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/two-sum.c:35:28: error: incompatible type for argument 1 of ‘twoSum’
   35 |   list_int result = twoSum(tmp3, 9);
      |                            ^~~~
      |                            |
      |                            int *
/workspace/mochi/tests/machine/x/c/two-sum.c:19:26: note: expected ‘list_int’ but argument is of type ‘int *’
   19 | list_int twoSum(list_int nums, int target) {
      |                 ~~~~~~~~~^~~~
/workspace/mochi/tests/machine/x/c/two-sum.c:40:24: error: subscripted value is neither array nor pointer nor vector
   40 |     printf("%d", result[0]);
      |                        ^
/workspace/mochi/tests/machine/x/c/two-sum.c:48:24: error: subscripted value is neither array nor pointer nor vector
   48 |     printf("%d", result[1]);
      |                        ^

   1: // Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:23Z
