tests/machine/x/c/two-sum.c
// Generated by Mochi compiler v0.10.24 on 2025-07-13T03:59:23Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
list_int twoSum(list_int nums, int target) {
  int n = nums.len;
  for (int i = 0; i < n; i++) {
    for (int j = i + 1; j < n; j++) {
      if (nums[i] + nums[j] == target) {
        int tmp1[] = {i, j};
        return tmp1;
      }
    }
  }
  int tmp2[] = {(-1), (-1)};
  return tmp2;
}

int main() {
  int tmp3[] = {2, 7, 11, 15};
  list_int result = twoSum(tmp3, 9);
  {
    int first = 1;
    if (!first)
      printf(" ");
    printf("%d", result[0]);
    first = 0;
    printf("\n");
  }
  {
    int first = 1;
    if (!first)
      printf(" ");
    printf("%d", result[1]);
    first = 0;
    printf("\n");
  }
  return 0;
}
